Replace deprecated Boolean/Integer constructors with valueOf
The build was full of 'deprecated and marked for removal' warnings for
new Boolean(boolean) and new Integer(int/String). Switched to
Boolean.valueOf / Integer.valueOf everywhere except the old message
queue (MessageManager) and the Applet code, both explicitly exempted.
Also removed a stale 'TO DO - get rid of this legacy code' comment in
FrEnd whose code was already gone.

Full suite 123/123 green under Xvfb; no remaining deprecation warnings
outside the two exempted areas.