@@ -74,7 +74,7 @@ public class MakeLinksToNearestNode {
       final Node candidate = (Node) this.node_manager.element
         .get(counter);
       if (candidate.clazz.colour == colour) {
-        nodes.add(new Integer(counter));
+        nodes.add(Integer.valueOf(counter));
       }
     }
 
