@@ -25,7 +25,7 @@ public class Preferences {
     this.map.put(Preferences.key_output_pov_ground, "none");
     this.map.put(Preferences.key_output_pov_sky, "white");
     this.map.put(Preferences.key_output_pov_compression, "bulge");
-    this.map.put(Preferences.key_update_animation_when_pointer_over, new Boolean(FrEnd.viewer));
+    this.map.put(Preferences.key_update_animation_when_pointer_over, Boolean.valueOf(FrEnd.viewer));
     this.map.put(Preferences.renderer_old_double_buffer, Boolean.FALSE);
     this.map.put(Preferences.renderer_new_double_buffer, Boolean.TRUE);
   }
